fix more spacing for small screens

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,7 +1,3 @@
-p {
-  width: auto;
-}
-
 .stage-cube-cont {
   width: 50%;
   height: 100%;
