--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -24,7 +24,7 @@
     font-weight: 400;
 
     @media screen and (max-width: 768px) {
-      font-size: 30px;
+      font-size: 25px;
       white-space: nowrap;
     }
 
